--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "agroSubex",
   "version": "0.1.0",
   "private": true,
-  "homepage": "./welcome",
+  "homepage": "./",
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
