--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "homepage": "./",
   "dependencies": {
     "axios": "^0.18.0",
-    "bootstrap": "^4.1.3",
+    "bootstrap": "^4.5.2",
     "classnames": "^2.2.6",
     "gh-pages": "^2.0.1",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
+    "reactstrap": "^8.5.1",
     "uuid": "^3.3.2"
   },
   "scripts": {
